# tesserae

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/tesserae/: __init__.py  _common.py  io.py  postprocessing.py  processing.py
